--- a/src/style/App.css
+++ b/src/style/App.css
@@ -349,6 +349,10 @@
   pointer-events: none;
 }
 
+.modalClose {
+  border-radius: 50%;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -365,7 +369,15 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.total {
+  padding: 0.5em 1.5em;
+  background-color: rgb(212, 203, 205);
+  border-radius: 5px;
+}
+.cartItem {
+  background-color: rgb(246, 248, 248);
+  border-radius: 5;
+}
 .App-link {
   color: #61dafb;
 }
